[tool.poetry]
name = "nomaj"
version = "0.1.0"
description = "Experimental functional-style web framework"
authors = ["monomonedula <valh@tuta.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nvelope = "~1"
multidict = "^6.0.2"
Werkzeug = "^2.0.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^6.2.5"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
